// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`checkBaselineImageExists > should auto-save baseline when file does not exist and autoSaveBaseline is true 1`] = `
[
  [
    "[33m%s[0m",
    "
#####################################################################################
 INFO:
 Autosaved the image to
 /path/to/baseline.png
#####################################################################################",
  ],
]
`;

exports[`checkBaselineImageExists > should update baseline when updateBaseline is true 1`] = `
[
  [
    "[33m%s[0m",
    "
#####################################################################################
 INFO:
 Updated the actual image to
 /path/to/baseline.png
#####################################################################################",
  ],
]
`;

exports[`takeBase64ElementScreenshot > should fallback to takeResizedBase64Screenshot when takeElementScreenshot throws an error 1`] = `
[
  [
    "Error taking an element screenshot with the default \`element.takeElementScreenshot(elementId)\` method:",
    [Error: Screenshot failed],
    " We will retry with a resized screenshot",
  ],
]
`;

exports[`takeBase64ElementScreenshot > should log error and still call takeElementScreenshot if element is not WDIO element 1`] = `
[
  [
    " takeBase64ElementScreenshot element is not a valid element because of ",
    "{"elementId":"test-element-id"}",
  ],
]
`;
